fixes background on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
+
+
 .App {
   text-align: center;
-  background-image: url("./assets/pexels-mi.jpg");
-  background-attachment: fixed;
-  background-size: cover;
 }
 
 body, html {
   height: 100%;
+  width: 100%;
 }
 
 .App-logo {
@@ -37,14 +37,14 @@ body, html {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
 ul
 {
